solucionado el area del grid y agregado el banner con efecto de degradado, cambio de imagenes a carpeta others

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="contenedor_0">
       <div class="data wow bounceInUp">
         <div class="titles">
-          <h1>Lorem ipsum dolor sit amet,</h1>
-          <h1>consectetur adipisicing elit.</h1>
+          <h1>Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit.</h1>
         </div>
         <div class="text">
           <h3>Timo System ad minim veniam, quis nostrud</h3>
@@ -92,6 +92,24 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
         <p>Consectetur adipisicing elit,
           sed do eiusmod tempor incididunt ut labore</p>
       </div>
+    </div>
+
+
+    <div class="contenedor_3">
+      <div class="images">
+        <img src="" alt="desk">
+        <img src="" alt="phone">
+      </div>
+    </div>
+
+    <div class="contenedor_4 wow bounceInUp">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing</h1>
+    </div>
+    <div class="ptr4 wow bounceInUp">
+      <a href="#" id="btn4">Empezemos</a>
+    </div>
+    <div class="contenedor_5">
+
     </div>
 
 
