soluciones de errores antiriores

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         </div>
         <a class="menu-li" id="contact-form" href="#articulo"><span class="icon-down"></span>Learn more</a>
       </div>
-<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
- dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
- officia deserunt mollit anim id est laborum.-->
+      <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+      dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+      officia deserunt mollit anim id est laborum.-->
     </div>
 
     <div class="contenedor_1 wow bounceInUp" id="articulo">
@@ -95,10 +95,20 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
     </div>
 
 
+    <div class="texto wow bounceInRight">
+      <h1>Lorem ipsum dolor sit</h1>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure.</p>
+    </div>
     <div class="contenedor_3">
       <div class="images">
-        <img src="" alt="desk">
-        <img src="" alt="phone">
+        <div class="uno wow bounceInRight">
+          <!--img src="other/arch.png" alt="desk"-->
+          <img src="other/ba.jpg" alt="desk">
+        </div>
+        <div class="dos wow bounceInRight">
+          <img src="other/fo.jpg" alt="phone">
+        </div>
       </div>
     </div>
 
