solucionado el responvie del error anterior, se espera agregar imagen al landing

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
       <a href="#" id="btn4">Empezemos</a>
     </div>
     <div class="contenedor_5">
-      <h1>Reprehenderit in voluptate velit</h1>
-      <div class="icosvg">
+      <h1 class="wow bounceInLeft">Reprehenderit in voluptate velit</h1>
+      <div class="icosvg wow bounceInLeft">
         <i class="devicon-amazonwebservices-plain-wordmark"></i>
         <i class="devicon-oracle-original"></i>
         <i id="ba2" class="devicon-redhat-plain-wordmark"></i>
