solucion de errores SO FAR SO GOOD, se decidio dejar sin una imagen en el area de landing, el grid en el area de logos es excelente, parece no teder errores

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <a href="#" id="btn4">Empezemos</a>
     </div>
     <div class="contenedor_5">
-      <h1 class="wow bounceInLeft">Reprehenderit in voluptate velit</h1>
+      <h1 class="wow bounceInLeft">Reprehenderit in voluptate <span>velit</span> proident</h1>
       <div class="icosvg wow bounceInLeft">
         <i class="devicon-amazonwebservices-plain-wordmark"></i>
         <i class="devicon-oracle-original"></i>
@@ -130,7 +130,13 @@
         <i id="ba1" class="devicon-postgresql-plain-wordmark"></i>
       </div>
     </div>
-
+    <div class="contenedor_6"></div>
+    <div class="contenedor_7">
+        <h1 class="wow bounceInUp">Sorry, we're still <span>working... :(</span></h1>
+    </div>
+    <footer class="wow bounceInUp">
+      <h1>footer prron alv :v</h1>
+    </footer>
 
     <!--footer>
       <div class="logo">
