terminado el index, y 75% de FAQ 	*falta agregar phpmail 	*estilizar mas el area de contacto 	*falta realizar el "nosotros"

--- a/12index.html
+++ b/12index.html
@@ -123,9 +123,26 @@
       </div>
     </div>
     <div class="contenedor_6"></div>
-    <div class="contenedor_7">
-        <h1 class="wow bounceInUp">Sorry, we're still <span>working... :(</span></h1>
+    <div class="contenedor_8">
+      <h1>Nostrud exercitation ullamco</h1>
+      <div class="head">
+        <span id="btn1"></span>
+        <span id="btn2"></span>
+        <span id="btn3"></span>
+      </div>
+      <div class="bash">
+        <p>$ </p>
+        <div class='console-container'>
+          <span id='text'></span>
+          <div class='console-underscore' id='console'>&#95;</div>
+        </div>
+  
+
+      </div>
     </div>
+    <!--div class="contenedor_7">
+        <h1 class="wow bounceInUp">Sorry, we're still <span>working... :(</span></h1>
+    </div-->
     <div ng-view></div>
     <script src="js/wow.js"></script>
               <script>
@@ -143,6 +160,7 @@
       }
     </script>
     <script src="js/cs_js.js"></script>
+    <script src="js/j.js"></script>
     <script src="js/route.js"></script>
   </body>
 </html>
