--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
     <title>FAQ</title>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <link rel="stylesheet" href="css/headless.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/faq_style.css">
     <link rel="stylesheet" href="css/fontello-embedded.css">
     <link rel="stylesheet" href="css/menu.css">
@@ -32,25 +33,94 @@
     </header>
     <div class="contenedor_0">
       <h1>Lorem ipsum dolor sit amet, consectetur</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim.</p>
+      
     </div>
-    <!--div class="menudrop">
-      <div class="dropdown"><span class="lnr lnr-menu"></span> Dropdown menu</div>
-      <ul class="dropdown-list">
-        <li><span class="lnr lnr-home"></span>Lorem</li>
-        <li><span class="lnr lnr-envelope"></span>Dolor</li>
-        <li><span class="lnr lnr-cog"></span>Amet</li>
-        <li><span class="lnr lnr-min"></span>Minim</li>
-      </ul>
-    </div-->
-    <li><a href="#">cero</a></li>
+
+	<div class="f_dir">
+    <article class="pak" id="gen">
+      <h1>General</h1>
+      <li><a href="#rst">Lorem ipsum prueba 1</a></li>	
+      <li><a href="#sst">Lorem ipsum prueba 2</a></li>	
+      <li><a href="#tst">Lorem ipsum prueba 3</a></li>	
+      <li><a href="#cst">Lorem ipsum prueba 4</a></li>	
+      <li><a href="#qst">Lorem ipsum prueba 5</a></li>	
+      <li><a href="#sist">Lorem ipsum prueba 6</a></li>	
+      <li><a href="#sest">Lorem ipsum prueba 7</a></li>	
+    </article>
+    <article class="pak" id="sec">
+      <h1>Seguridad</h1>
+      <li><a href="#rst">Data ipsum prueba 1</a></li>	
+      <li><a href="#sst">Data ipsum prueba 2</a></li>	
+      <li><a href="#tst">Data ipsum prueba 3</a></li>	
+      <li><a href="#cst">Data ipsum prueba 4</a></li>	
+      <li><a href="#qst">Data ipsum prueba 5</a></li>	
+      <li><a href="#sist">Data ipsum prueba 6</a></li>	
+      <li><a href="#sest">Data ipsum prueba 7</a></li>	
+    </article>
+	</div>
+	<div class="f_dat">
+    <article class="art" id="rst">
+      <h1>Lorem ipsum dolor 1</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
+        inventore illum illo impedit eaque 
+        consectetur sunt, incidunt dolorum! Exercitationem minima 
+        libero voluptatum error.</p>
+    </article>
+    <article class="art" id="sst">
+        <h1>Lorem ipsum dolor 2</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
+          inventore illum illo impedit eaque 
+          consectetur sunt, incidunt dolorum! Exercitationem minima 
+          libero voluptatum error.</p>
+      </article>
+      <article class="art" id="tst">
+        <h1>Lorem ipsum dolor 3</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
+          inventore illum illo impedit eaque 
+          consectetur sunt, incidunt dolorum! Exercitationem minima 
+          libero voluptatum error.</p>
+      </article>
+      <article class="art" id="cst">
+        <h1>Lorem ipsum dolor 4</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
+          inventore illum illo impedit eaque 
+          consectetur sunt, incidunt dolorum! Exercitationem minima 
+          libero voluptatum error.</p>
+      </article>
+      <article class="art" id="qst">
+        <h1>Lorem ipsum dolor 5</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
+          inventore illum illo impedit eaque 
+          consectetur sunt, incidunt dolorum! Exercitationem minima 
+          libero voluptatum error.</p>
+      </article>
+      <article class="art" id="sist">
+        <h1>Lorem ipsum dolor 6</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
+          inventore illum illo impedit eaque 
+          consectetur sunt, incidunt dolorum! Exercitationem minima 
+          libero voluptatum error.</p>
+      </article>
+      <article class="art" id="sest">
+        <h1>Lorem ipsum dolor 7</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
+          inventore illum illo impedit eaque 
+          consectetur sunt, incidunt dolorum! Exercitationem minima 
+          libero voluptatum error.</p>
+      </article>
+	</div>
+
+
+    <div ng-controller="unom"></div>
+
+
+
+    <!--li><a href="#">cero</a></li>
     <li><a href="#uno">uno</a></li>
     <li><a href="#dos">dos</a></li>
-    <li><a href="#tres">tres</a></li>
+    <li><a href="#tres">tres</a></li-->
+    
     <div ng-view></div>
-
-
     <script>
       function openNav() {
         document.getElementById("mySidenav").style.width = "250px";
