--- a/faq.html
+++ b/faq.html
@@ -2,6 +2,8 @@
 <html ng-app="app">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FAQ</title>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <link rel="stylesheet" href="css/headless.css">
