SO FAR SO GOOD xdxd. **Falta agregar el area de php para funcion mail() **optimizar el footer

--- a/faq.html
+++ b/faq.html
@@ -26,89 +26,89 @@
       <nav class="overlay">
         <div class="sidenav" id="mySidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <a class="menu-li" href="#0">Inicio</a>
-          <a class="menu-li" href="#0">FAQ</a>
-          <!--a class="menu-li" id="contact-form" href="#0">Contacto</a-->
+          <a class="menu-li" href="index.html">Inicio</a>
+          <a class="menu-li" href="">FAQ</a>
+          <a class="menu-li" id="" href="we.html">Nosotros</a>
           <a class="menu-li" id="contact-form" href="#conta">Contacto</a>
         </div>
       </nav>
     </header>
     <div class="contenedor_0">
-      <h1>Lorem ipsum dolor sit amet, consectetur</h1>
-      
+      <h1>PREGUNTAS FRECUENTES SOBRE TIMO SYSTEMS</h1>
+
     </div>
 
 	<div class="f_dir">
     <article class="pak" id="gen">
       <h1>General</h1>
-      <li><a href="#rst">Lorem ipsum prueba 1</a></li>	
-      <li><a href="#sst">Lorem ipsum prueba 2</a></li>	
-      <li><a href="#tst">Lorem ipsum prueba 3</a></li>	
-      <li><a href="#cst">Lorem ipsum prueba 4</a></li>	
-      <li><a href="#qst">Lorem ipsum prueba 5</a></li>	
-      <li><a href="#sist">Lorem ipsum prueba 6</a></li>	
-      <li><a href="#sest">Lorem ipsum prueba 7</a></li>	
+      <li><a href="#rst">¿Qué es TIMO Systems?</a></li>
+      <li><a href="#sst">¿Para Quién?</a></li>
+      <li><a href="#tst">¿Qué empresas pueden optar a un sistema?</a></li>
+      <li><a href="#cst">¿Cuánto tiempo?</a></li>
+      <li><a href="#qst">¿Ofrecen soporte?</a></li>
     </article>
     <article class="pak" id="sec">
       <h1>Seguridad</h1>
-      <li><a href="#rst">Data ipsum prueba 1</a></li>	
-      <li><a href="#sst">Data ipsum prueba 2</a></li>	
-      <li><a href="#tst">Data ipsum prueba 3</a></li>	
-      <li><a href="#cst">Data ipsum prueba 4</a></li>	
-      <li><a href="#qst">Data ipsum prueba 5</a></li>	
-      <li><a href="#sist">Data ipsum prueba 6</a></li>	
-      <li><a href="#sest">Data ipsum prueba 7</a></li>	
+      <li><a href="#rst">¿Es seguro un sistema en la web?</a></li>
+      <li><a href="#sst">¿Porque confiar en TIMO Systems?</a></li>
+      <li><a href="#tst">¿Como funciona un sistema en la web?</a></li>
+      <li><a href="#cst">¿Es segura la integracion movil?</a></li>
     </article>
 	</div>
 	<div class="f_dat">
     <article class="art" id="rst">
-      <h1>Lorem ipsum dolor 1</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
-        inventore illum illo impedit eaque 
-        consectetur sunt, incidunt dolorum! Exercitationem minima 
-        libero voluptatum error.</p>
+      <h1>¿Qué es TIMO Systems?</h1>
+      <p>Somos una empresa dedicada al desarrollo de sistemas para automatizar, apoyar y
+      agilizar procesos empresariales de pequeñas, medianas y grandes empresas a nivel
+      nacional, utlizando un software basado en la web para poder disponer de la informacion
+      en todo momento desde cualquier parte, en cualquier tipo de dispositvo.</p>
     </article>
     <article class="art" id="sst">
-        <h1>Lorem ipsum dolor 2</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
-          inventore illum illo impedit eaque 
-          consectetur sunt, incidunt dolorum! Exercitationem minima 
-          libero voluptatum error.</p>
+        <h1>¿Para Quién?</h1>
+        <p>Software orientado a las empresas que necesiten agilizar sus procesos empresariales,
+         con un flujo de informacion deficiente y poca disponibilidad de la informacion.</p>
       </article>
       <article class="art" id="tst">
-        <h1>Lorem ipsum dolor 3</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
-          inventore illum illo impedit eaque 
-          consectetur sunt, incidunt dolorum! Exercitationem minima 
-          libero voluptatum error.</p>
+        <h1>¿Qué empresas pueden optar a un sistema?</h1>
+        <p>Cualquier tipo de empresa que desee innovar, que desee maximizar su efectividad, no
+        importando su presupuesto, TIMO Systems se adapta a tus necesidades.</p>
       </article>
       <article class="art" id="cst">
-        <h1>Lorem ipsum dolor 4</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
-          inventore illum illo impedit eaque 
-          consectetur sunt, incidunt dolorum! Exercitationem minima 
-          libero voluptatum error.</p>
+        <h1>¿Cúanto tiempo?</h1>
+        <p>Cada software tiene su propio tiempo de diseño, diagramacion, documentacion y Programacion
+        como es hecho a las necesidades de la empresa, cada software tiene un tiempo de creacion diferente,
+      pero cada software se trabaja de la mejor manera, eficientemente.</p>
       </article>
       <article class="art" id="qst">
-        <h1>Lorem ipsum dolor 5</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
-          inventore illum illo impedit eaque 
-          consectetur sunt, incidunt dolorum! Exercitationem minima 
-          libero voluptatum error.</p>
+        <h1>¿Ofrecen soporte?</h1>
+        <p>Si, todos los sistemas creados de TIMO Systems tiene un tiempo de implementacion, tiempo de testeo
+        y un tiempo de soporte ya implementado</p>
       </article>
       <article class="art" id="sist">
-        <h1>Lorem ipsum dolor 6</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
-          inventore illum illo impedit eaque 
-          consectetur sunt, incidunt dolorum! Exercitationem minima 
-          libero voluptatum error.</p>
+        <h1>¿Es seguro un sistema web?</h1>
+        <p>Los servidores donde se aloja el sistema utiliza estandares de seguridad estrictamente altos, debido
+        al tipo de informacion que se almacena en ellos, TIMO Systems responde ante cualquier caida o inconveniente
+      que pueda ocurrir.</p>
       </article>
       <article class="art" id="sest">
-        <h1>Lorem ipsum dolor 7</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quibusdam repellat placeat 
-          inventore illum illo impedit eaque 
-          consectetur sunt, incidunt dolorum! Exercitationem minima 
-          libero voluptatum error.</p>
+        <h1>¿Por qué confiar en TIMO Systems?</h1>
+        <p>TIMO Systems ofrece un servicio 24/7 sobre sus sistemas, una implementacion y un seguimiento al Software
+        creado, cada sistema esta elaborado con buenas practicas, politicas y estandares de seguridad estrictamente altos.</p>
+      </article>
+      <article class="art" id="sest">
+        <h1>¿Como Funciona un sistema en la web?</h1>
+        <p>Sin entrar en detalles tecnicos, un sistema de automatizacion de procesos empresariales el cual
+        esta alojado en un servidor web, esto beneficia que cualquier empresario puede usar el sistema sin estar
+      fisicamente presente dentro de la empresa, esto agiliza el flujo de la informacion, un sistema rapido, seguro
+    que permite la disponibilidad de la informacion en cualquier parte y en cualquier momento. </p>
+      </article>
+      <article class="art" id="sest">
+        <h1>¿Es segura la integracion movil?</h1>
+        <p>Si, porque la integracion movil no poseera todos las funciones que el sistema tiene, solo las que el gerente
+        o las que la empresa indique que estaran habilitadas, esto se hace para prevenir cualquier tipo de inconveniente con
+      la integridad y confidencialidad de la informacion, el sistema movil poseera reglas de seguridad mas estrictas como por ejemplo
+    un limite de tiempo de sesion, numero de sesiones por usuario, fecha, hora en la que se puede accesar, etc y todos las gestiones
+  realizadas quedaran registradas para monitorear el uso del sistema fuera de la empresa. </p>
       </article>
 	</div>
 
@@ -121,7 +121,7 @@
     <li><a href="#uno">uno</a></li>
     <li><a href="#dos">dos</a></li>
     <li><a href="#tres">tres</a></li-->
-    
+
     <div ng-view></div>
     <script>
       function openNav() {
@@ -132,7 +132,7 @@
         document.getElementById("mySidenav").style.width = "0";
         //document.getElementById("main_content").style.marginRight= "0";
       }
-    </script>      
+    </script>
     <script src="js/faq.js"></script>
   </body>
 </html>
