Correccion del Index, > Contenedor 0 -> Cambiado color de h3, cambiado tamanio y padding de h1 > Contenedor 1 -> agregado padding para dispositivos moviles > Error encontreado: 	Terminal no responsive :(

--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
           <h1>CREAMOS EL SOFTWARE A TU MEDIDA</h1>
         </div>
         <div class="text">
-          <h3>Con TIMO System usted mantiene el control de sus procesos</h3>
+          <!--h3>Con TIMO System usted mantiene el control de sus procesos</h3>
           <h3>empresariales, creamos software orientado a la utilidad y</h3>
-          <h3>a los requerimientos de su empresa.</h3>
+          <h3>a los requerimientos de su empresa.</h3-->
+            <h3>Con TIMO System usted mantiene el control de sus procesos 
+              empresariales, creamos software orientado a la utilidad y 
+              a los requerimientos de su empresa.
+            </h3>
         </div>
         <a class="menu-li" id="contact-form" href="#articulo"><span class="icon-down"></span>¿Por qué TIMO SYSTEMS?</a>
       </div>
